# ismk

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ismk/: __init__.py  __main__.py  _interface_alias.py  _version.py  api.py  benchmark.py  checkpoints.py  cli.py  cwl.py  dag.py  exceptions.py  gui.html  gui.py  ioflags.py  jobs.py  logging.py  modules.py  notebook.py  output_index.py  parser.py  path_modifier.py  pathvars.py  persistence.py  persistence_encryption.py  profiles.py  report.css  resources.py  ruleinfo.py  rules.py  shell.py  sourcecache.py  spawn_jobs.py  storage.py  target_jobs.py  utils.py  workflow.py  wrapper.py
src/ismk_executor_plugin_cluster_generic/: __init__.py
tests/: README.md  common.py  conftest.py  test_api.py  test_args.py  test_executor_test_suite.py  test_expand.py  test_internals.py  test_io.py  test_jupyter_notebook_pathlike.py  test_linting.py  test_logging.py  test_output_index.py  test_persistence.py  test_persistence_backup.py  test_persistence_encryption.py  test_prefix_lookup.py  test_schema.py  test_script.py  test_sourcecache.py  tests.py  tests_using_conda.py
tests/test01/: Snakefile
tests/test_ancient/: Snakefile
tests/test_checkpoints_dir/: Snakefile
tests/test_cloud_checkpoints_issue574/: Snakefile
tests/test_conda_custom_prefix/: Snakefile  test-env.yaml
tests/test_conda_global/: Snakefile
tests/test_conda_python_3_7_script/: test_python_env.yaml  test_script_python_3_7.py
tests/test_conda_python_script/: __init__.py
tests/test_conda_run/: Snakefile
tests/test_containerized/: Dockerfile  Snakefile
tests/test_converting_path_for_r_script/: r-script.R
tests/test_default_remote/: Snakefile
(+229 files in other folders)
