[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[project]
name = "ismk"
version = "2025.12.18"
description = "Modified SMK library that supports defining workflows via strings without Snakefile"
readme = "README.md"
requires-python = ">= 3.11"
license = "MIT"
authors = [{ name = "xbugs221", email = "xbugs221@protonmail.com" }]
keywords = ["workflow", "pipeline"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

dependencies = [
  "uv-build>=0.2.0",
  "appdirs",
  "immutables",
  "configargparse",
  "connection_pool>=0.0.3",
  "docutils",
  "gitpython",
  "humanfriendly",
  "jinja2>=3.0,<4.0",
  "jsonschema",
  "nbformat",
  "packaging >=24.0",
  "psutil",
  "pulp>=2.3.1,<3.4",
  "pyyaml",
  "referencing",
  "requests>=2.8.1,<3.0",
  "reretry",
  "smart-open>=4.0,<8.0",
  "tabulate",
  "throttler",
  "wrapt",
  "yte>=1.5.5,<2.0",
  "dpath>=2.1.6,<3.0.0",
  "conda-inject>=1.3.1,<2.0",
]

[project.scripts]
ismk = "ismk.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["ismk", "ismk_executor_plugin_cluster_generic"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.css", "*.js", "*.jinja2", "*.json", "*.yaml", "*.yml"]

[dependency-groups]
dev = ["pytest>=9.0.1", "cryptography", "pandas", "numpy", "pillow"]
